# DataPulse

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.celery  Dockerfile.flower  README.md  alembic.ini  pyproject.toml  run_celery.sh
backend/app/: __init__.py  main.py  worker.py
backend/app/api/api_v1/: api.py
backend/app/api/api_v1/endpoints/: auth.py  flower.py  items.py
backend/app/core/: celery_config.py  config.py  enums.py  security.py
backend/app/db/: base.py
backend/app/models/: __init__.py  base.py  item.py  user.py  user_workspace_role.py  workspace.py
backend/app/schemas/: __init__.py  item.py  user.py  workspace.py
backend/app/services/: auth.py
backend/app/tasks/: __init__.py  example.py
backend/migrations/: env.py
backend/tests/: conftest.py  test_main.py
backend/tests/api/: test_auth.py
frontend/: README.md  package.json  pnpm-lock.yaml
infra/: README.md
